@@ -1,5 +1,12 @@
 plugins {
     id 'java'
+    id 'me.champeau.jmh' version '0.6.8'
+}
+
+jmh {
+    jvmArgsAppend = ['--enable-preview', '--add-modules=jdk.incubator.vector']
+    warmupIterations = 1
+    iterations = 3
 }
 
 tasks.withType(JavaCompile) {
@@ -9,6 +16,10 @@ tasks.withType(JavaCompile) {
 
 tasks.withType(Test) {
     jvmArgs += ['--add-modules=jdk.incubator.vector']
+    useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
 }
 
 tasks.withType(JavaExec) {
